Fix jumping toggle

--- a/styles/light-theme.css
+++ b/styles/light-theme.css
@@ -163,7 +163,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-justify-content: space-between;
+  justify-content: space-around;
   box-shadow: 8px 0px 8px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   color: #f9f9fa;
   background: #66789a;
